k8s/production/traffic-lab-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-lab-demo
spec:
  selector:
    app: traffic-lab-demo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
